deploy: a081c8dd8a88b59b6a9b39d86ee8faa8796a5f0a

--- a/_notebooks/cass_koopmans_1.ipynb
+++ b/_notebooks/cass_koopmans_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1201f254",
+   "id": "623e29af",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8baa1d2",
+   "id": "d60c6a6b",
    "metadata": {},
    "source": [
     "# Cass-Koopmans Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0410499",
+   "id": "f32e8501",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc2d2c7",
+   "id": "48d1f6d0",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9424d6",
+   "id": "39c62e08",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "070aaa01",
+   "id": "101ebb68",
    "metadata": {},
    "source": [
     "## The Model\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101c0e8f",
+   "id": "8ac63212",
    "metadata": {},
    "source": [
     "### Digression: Aggregation Theory\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5636c5a4",
+   "id": "72204fd7",
    "metadata": {},
    "source": [
     "#### An  Economy\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4575abb0",
+   "id": "50428b28",
    "metadata": {},
    "source": [
     "## Planning Problem\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37834eeb",
+   "id": "29311592",
    "metadata": {},
    "source": [
     "### Useful Properties of Linearly Homogeneous Production Function\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cca836b8",
+   "id": "fb3c2acd",
    "metadata": {},
    "source": [
     "### First-order necessary conditions\n",
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9c2d2d",
+   "id": "d70f882a",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "419ea0e6",
+   "id": "ee54df27",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b71383c4",
+   "id": "dad411d7",
    "metadata": {},
    "source": [
     "We can construct an economy with the Python code:"
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f9839d1",
+   "id": "ebb81919",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f84f9fd9",
+   "id": "69a54108",
    "metadata": {},
    "source": [
     "## Shooting Algorithm\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f88c44",
+   "id": "d4d8858b",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915a818f",
+   "id": "071fe1cb",
    "metadata": {},
    "source": [
     "We’ll start with an incorrect guess."
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e45de29e",
+   "id": "32c923ca",
    "metadata": {
     "hide-output": false
    },
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71b5287",
+   "id": "95ad7f8a",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b7f83d",
+   "id": "bff32e74",
    "metadata": {},
    "source": [
     "Evidently, our initial guess for $ \\mu_0 $ is too high, so\n",
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8daf070a",
+   "id": "1978aeec",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0862872",
+   "id": "783f7707",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34392873",
+   "id": "5fda4386",
    "metadata": {},
    "source": [
     "Now we can solve the model and plot the paths of consumption, capital, and Lagrange multiplier."
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a631506",
+   "id": "ea40cf52",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c8ef67",
+   "id": "99933d54",
    "metadata": {},
    "source": [
     "## Setting Initial Capital to Steady State Capital\n",
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8990ac5d",
+   "id": "f64002dd",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df20e56",
+   "id": "df671f85",
    "metadata": {},
    "source": [
     "Now we plot"
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5850c8c",
+   "id": "b00637da",
    "metadata": {
     "hide-output": false
    },
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bf3757",
+   "id": "c6fd0ee8",
    "metadata": {},
    "source": [
     "Evidently,  with a large value of\n",
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d901e68",
+   "id": "d5eb1c16",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f661b7c7",
+   "id": "c3d4b572",
    "metadata": {},
    "source": [
     "Notice how the planner pushes capital toward the steady state, stays\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e95de391",
+   "id": "62a14a1e",
    "metadata": {
     "hide-output": false
    },
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e54649b",
+   "id": "8a511f38",
    "metadata": {},
    "source": [
     "## A Turnpike Property\n",
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b10ebbb8",
+   "id": "dc6d85d8",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df3c220",
+   "id": "9bcbc17d",
    "metadata": {},
    "source": [
     "In the above graphs, different colors  are associated with\n",
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41116c88",
+   "id": "f7b39a21",
    "metadata": {
     "hide-output": false
    },
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d2c9b7",
+   "id": "957fbf21",
    "metadata": {
     "hide-output": false
    },
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b79c2a",
+   "id": "4cebb271",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2307d618",
+   "id": "b8802e80",
    "metadata": {},
    "source": [
     "## A Limiting Infinite Horizon Economy\n",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6399996e",
+   "id": "c5d8acdf",
    "metadata": {
     "hide-output": false
    },
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec000563",
+   "id": "4fcf28c8",
    "metadata": {},
    "source": [
     "Since $ K_0<\\bar K $, $ f'(K_0)>\\rho +\\delta $.\n",
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f07ac68a",
+   "id": "d545d755",
    "metadata": {},
    "source": [
     "### Exercise"
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59c62923",
+   "id": "101a6cd2",
    "metadata": {},
    "source": [
     "### Exercise 8.1\n",
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec375ffe",
+   "id": "79c485a5",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 8.1](https://eqm.quantecon.org/#ck1_ex1)"
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f555ed70",
+   "id": "500b1fba",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29467808",
+   "id": "6db00e9c",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -1243,7 +1243,7 @@
   }
  ],
  "metadata": {
-  "date": 1706657885.5476081,
+  "date": 1708319631.874477,
   "filename": "cass_koopmans_1.md",
   "kernelspec": {
    "display_name": "Python",
