--- a/_notebooks/matsuyama.ipynb
+++ b/_notebooks/matsuyama.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "349527f0",
+   "id": "1e6a9bef",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fc1b7d",
+   "id": "fc75a4d8",
    "metadata": {},
    "source": [
     "# Globalization and Cycles"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28da570",
+   "id": "30cfcebf",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01cbbbde",
+   "id": "e2c72428",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "302b9411",
+   "id": "d64e7089",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9a2edef",
+   "id": "9e1929e1",
    "metadata": {},
    "source": [
     "### Background\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e8cdbb",
+   "id": "17ba5275",
    "metadata": {},
    "source": [
     "## Key Ideas\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c9b68a",
+   "id": "6647d8ca",
    "metadata": {},
    "source": [
     "### Innovation Cycles\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43a3ac9",
+   "id": "d92fbbf6",
    "metadata": {},
    "source": [
     "### Synchronization\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389b8c09",
+   "id": "9ecd22a8",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb1c7084",
+   "id": "a95188b0",
    "metadata": {},
    "source": [
     "### Prices\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67182f09",
+   "id": "b1ff982c",
    "metadata": {},
    "source": [
     "### New Varieties\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa2d8f2",
+   "id": "7e2d8a01",
    "metadata": {},
    "source": [
     "### Law of Motion\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b9f59bd",
+   "id": "40d78cfe",
    "metadata": {},
    "source": [
     "## Simulation\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e923e018",
+   "id": "d0508c44",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1010ba1",
+   "id": "fc004de8",
    "metadata": {},
    "source": [
     "### Time Series of Firm Measures\n",
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15c9e6d",
+   "id": "76f47059",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f69fb3",
+   "id": "8f24f65d",
    "metadata": {},
    "source": [
     "In the first case, innovation in the two countries does not synchronize.\n",
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae6e7b6",
+   "id": "12d365a7",
    "metadata": {},
    "source": [
     "### Basin of Attraction\n",
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52f1896",
+   "id": "f50a20ca",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92da2f31",
+   "id": "f88caa15",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "524e0c75",
+   "id": "8d4093c3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://eqm.quantecon.org/#matsuyama_ex1)"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c43b240",
+   "id": "79b9e0ad",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333097cc",
+   "id": "6659e5fe",
    "metadata": {},
    "source": [
     "Additionally, instead of just seeing 4 plots at once, we might want to\n",
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd81adf",
+   "id": "85aeb162",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b4ad304",
+   "id": "0bb42112",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   }
  ],
  "metadata": {
-  "date": 1706657885.954384,
+  "date": 1708319632.2804384,
   "filename": "matsuyama.md",
   "kernelspec": {
    "display_name": "Python",
