--- a/_notebooks/uncertainty_traps.ipynb
+++ b/_notebooks/uncertainty_traps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5136dda3",
+   "id": "9aa50e3f",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d3f629d",
+   "id": "3456c8fd",
    "metadata": {},
    "source": [
     "# Uncertainty Traps"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1f0e67",
+   "id": "7e0f44ad",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd7781b6",
+   "id": "b00da2f7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1ac56fe",
+   "id": "9cf8bf96",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c075c787",
+   "id": "7b06d14d",
    "metadata": {},
    "source": [
     "## The Model\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a06f6b",
+   "id": "e27997de",
    "metadata": {},
    "source": [
     "### Fundamentals\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81dc978b",
+   "id": "9958e23f",
    "metadata": {},
    "source": [
     "### Output\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ccca289",
+   "id": "5706b584",
    "metadata": {},
    "source": [
     "### Information and Beliefs\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "429dd762",
+   "id": "ebc940d7",
    "metadata": {},
    "source": [
     "### Participation\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03961c64",
+   "id": "ca984d0c",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f43156",
+   "id": "3e0d5bd0",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8c3a61",
+   "id": "6592e8ad",
    "metadata": {},
    "source": [
     "In the results below we use this code to simulate time series for the major variables."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08c521e7",
+   "id": "0ca205eb",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03b0580",
+   "id": "0d7d9e81",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154181f2",
+   "id": "d4ace251",
    "metadata": {},
    "source": [
     "## Exercise 1.1\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b4fbce",
+   "id": "d6d6a542",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.1](https://eqm.quantecon.org/#uncertainty_traps_ex1)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a638b3",
+   "id": "36aae485",
    "metadata": {},
    "source": [
     "## Exercise 1.2\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2bbba1b",
+   "id": "88649f03",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.2](https://eqm.quantecon.org/#uncertainty_traps_ex2)\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61187076",
+   "id": "c67e8e42",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b0363e5",
+   "id": "9e2dbc99",
    "metadata": {},
    "source": [
     "The points where the curves hit the 45 degree lines are the long-run\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e2e88c",
+   "id": "c6b38663",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8e79d26",
+   "id": "da522e5d",
    "metadata": {},
    "source": [
     "First, let’s see how well $ \\mu $ tracks $ \\theta $ in these\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc969b58",
+   "id": "a3ec97b0",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8e8b94",
+   "id": "c6e10f91",
    "metadata": {},
    "source": [
     "Now let’s plot the whole thing together"
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857ffe54",
+   "id": "a5660aeb",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70546a0",
+   "id": "8d53645b",
    "metadata": {},
    "source": [
     "If you run the code above you’ll get different plots, of course.\n",
@@ -675,7 +675,7 @@
   }
  ],
  "metadata": {
-  "date": 1706657886.410133,
+  "date": 1708319632.7326217,
   "filename": "uncertainty_traps.md",
   "kernelspec": {
    "display_name": "Python",
