--- a/_notebooks/markov_perf.ipynb
+++ b/_notebooks/markov_perf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca47d056",
+   "id": "1e7456ce",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb743e06",
+   "id": "022fd647",
    "metadata": {},
    "source": [
     "# Markov Perfect Equilibrium\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd26a35c",
+   "id": "0b320917",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107c1240",
+   "id": "9ee0d89d",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3690489",
+   "id": "b135709a",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8704ad3e",
+   "id": "d18a96ac",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e15a2fd4",
+   "id": "068c66b2",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a158ce92",
+   "id": "f2b1c0d6",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c38da8",
+   "id": "5fe1ebff",
    "metadata": {},
    "source": [
     "### Example: A Duopoly Model\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ff9b24",
+   "id": "a00730b3",
    "metadata": {},
    "source": [
     "### Computation\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b17e0ef",
+   "id": "6ee5085e",
    "metadata": {},
    "source": [
     "## Linear Markov Perfect Equilibria\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a91b350c",
+   "id": "426a20df",
    "metadata": {},
    "source": [
     "### Coupled Linear Regulator Problems\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2781a064",
+   "id": "bfa11a86",
    "metadata": {},
    "source": [
     "### Computing Equilibrium\n",
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9005fe6b",
+   "id": "80e5ddf5",
    "metadata": {},
    "source": [
     "#### Key Insight\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea17c3c",
+   "id": "690cf493",
    "metadata": {},
    "source": [
     "#### Infinite Horizon\n",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aabe72ab",
+   "id": "b1b0ae99",
    "metadata": {},
    "source": [
     "### Implementation\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e62f4ad",
+   "id": "a7b51446",
    "metadata": {},
    "source": [
     "## Application\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbb8c9ea",
+   "id": "0272bf4e",
    "metadata": {},
    "source": [
     "### A Duopoly Model\n",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b1acc1",
+   "id": "2f808839",
    "metadata": {},
    "source": [
     "### Parameters and Solution\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fce40e9a",
+   "id": "f77ed670",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8021ec50",
+   "id": "e9428246",
    "metadata": {},
    "source": [
     "Running the code produces the following output.\n",
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b209e497",
+   "id": "eb438a86",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5449c42",
+   "id": "9d3b58b9",
    "metadata": {},
    "source": [
     "This is close enough for rock and roll, as they say in the trade.\n",
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09434021",
+   "id": "e634f125",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865ab075",
+   "id": "30f9a835",
    "metadata": {},
    "source": [
     "### Dynamics\n",
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f729e87",
+   "id": "e31f881d",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18916d03",
+   "id": "da4892c0",
    "metadata": {},
    "source": [
     "Note that the initial condition has been set to $ q_{10} = q_{20} = 1.0 $.\n",
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e18e50",
+   "id": "5f361d28",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01f4624",
+   "id": "aec92a1a",
    "metadata": {},
    "source": [
     "## Exercise 12.1\n",
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5dbcb5",
+   "id": "3d587a0c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 12.1](https://eqm.quantecon.org/#mp_ex1)\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4222b1dc",
+   "id": "ea6fc196",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18d4285c",
+   "id": "50bbc4f0",
    "metadata": {},
    "source": [
     "Now we evaluate the time path of industry output and prices given\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6776769d",
+   "id": "d8112298",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c1791c",
+   "id": "2ee78c55",
    "metadata": {},
    "source": [
     "Next, let’s have a look at the monopoly solution.\n",
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3424c170",
+   "id": "eadf9b91",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "089fa4fe",
+   "id": "34d411fc",
    "metadata": {},
    "source": [
     "Let’s have a look at the different time paths"
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3008a0",
+   "id": "88e8f34f",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eebdda4",
+   "id": "7f0d8ed8",
    "metadata": {},
    "source": [
     "## Exercise 12.2\n",
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29eedee2",
+   "id": "8153c3bf",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d4bfe5",
+   "id": "423a43f8",
    "metadata": {},
    "source": [
     "![https://eqm.quantecon.org/_static/lecture_specific/markov_perf/judd_fig2.png](https://eqm.quantecon.org/_static/lecture_specific/markov_perf/judd_fig2.png)\n",
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177c38c3",
+   "id": "f4fae765",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 12.2](https://eqm.quantecon.org/#mp_ex2)\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f88e5e",
+   "id": "42e1c3ed",
    "metadata": {
     "hide-output": false
    },
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29536d9",
+   "id": "83f352a0",
    "metadata": {},
    "source": [
     "Recalling that the control and state are\n",
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678064a3",
+   "id": "26c48790",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8aca53",
+   "id": "d1a34d4e",
    "metadata": {},
    "source": [
     "We can now compute the equilibrium using `qe.nnash`"
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c46887d",
+   "id": "b8f2a9a3",
    "metadata": {
     "hide-output": false
    },
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196c26f3",
+   "id": "60922866",
    "metadata": {},
    "source": [
     "Now let’s look at the dynamics of inventories, and reproduce the graph\n",
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa414482",
+   "id": "54d31c6b",
    "metadata": {
     "hide-output": false
    },
@@ -1179,7 +1179,7 @@
   }
  ],
  "metadata": {
-  "date": 1706657885.933877,
+  "date": 1708319632.2591596,
   "filename": "markov_perf.md",
   "kernelspec": {
    "display_name": "Python",
