--- a/_notebooks/two_auctions.ipynb
+++ b/_notebooks/two_auctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10580098",
+   "id": "9f0b48de",
    "metadata": {},
    "source": [
     "# First-Price and Second-Price Auctions\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2e0e0c",
+   "id": "b95121e9",
    "metadata": {},
    "source": [
     "## First-Price Sealed-Bid Auction (FPSB)\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a990f6",
+   "id": "0d0dde84",
    "metadata": {},
    "source": [
     "### Characterization of FPSB Auction\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb9430f",
+   "id": "7406b95d",
    "metadata": {},
    "source": [
     "## Second-Price Sealed-Bid Auction (SPSB)\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cbd1974",
+   "id": "a95588fe",
    "metadata": {},
    "source": [
     "## Characterization of SPSB Auction\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "860458d2",
+   "id": "26027c7a",
    "metadata": {},
    "source": [
     "## Uniform Distribution of Private Values\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2edfaa64",
+   "id": "96ff48f3",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c6c3536",
+   "id": "9d7b3806",
    "metadata": {},
    "source": [
     "## First price sealed bid auction\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc8c2cd",
+   "id": "e41465e3",
    "metadata": {},
    "source": [
     "## Second Price Sealed Bid Auction\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86811022",
+   "id": "93d026d8",
    "metadata": {},
    "source": [
     "## Python Code"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5644a16e",
+   "id": "193916af",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6270da5",
+   "id": "59dccbed",
    "metadata": {},
    "source": [
     "We repeat an auction with 5 bidders for 100,000 times.\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f0e411",
+   "id": "00405217",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e29a277",
+   "id": "4d55aa84",
    "metadata": {},
    "source": [
     "We compute and sort bid price distributions   that emerge under both  FPSB and SPSB."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddfe7233",
+   "id": "88d4bb25",
    "metadata": {
     "hide-output": false
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc388ad",
+   "id": "2d2072d9",
    "metadata": {},
    "source": [
     "Let’s now plot the *winning* bids $ b_{(n)} $ (i.e. the payment) against valuations, $ v_{(n)} $ for both FPSB and SPSB.\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c9d05b9",
+   "id": "ba8520f4",
    "metadata": {
     "hide-output": false
    },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f917199",
+   "id": "614da13a",
    "metadata": {},
    "source": [
     "## Revenue Equivalence Theorem\n",
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e05c9e0",
+   "id": "492c014a",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d09c302f",
+   "id": "4642610f",
    "metadata": {},
    "source": [
     "**Summary of FPSB and SPSB results with uniform distribution on $ [0,1] $**\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26756e99",
+   "id": "03b93502",
    "metadata": {},
    "source": [
     "## Calculation of  Bid Price in FPSB\n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6afd2ee",
+   "id": "10feb1db",
    "metadata": {
     "hide-output": false
    },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb39c791",
+   "id": "0f0664bf",
    "metadata": {},
    "source": [
     "We can check the accuracy of our `evaluate_largest` method by comparing it with an analytical solution.\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accfa884",
+   "id": "75ad3962",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec05451d",
+   "id": "72f7ed38",
    "metadata": {},
    "source": [
     "## $ \\chi^2 $ Distribution\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f23233ac",
+   "id": "05ec9d1f",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a847920f",
+   "id": "bc8f39c7",
    "metadata": {},
    "source": [
     "Now we’ll get Python to construct a bid price function"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648b6c0c",
+   "id": "6652071b",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74e1af59",
+   "id": "cac5aa53",
    "metadata": {
     "hide-output": false
    },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd7c2b9",
+   "id": "c3f45324",
    "metadata": {},
    "source": [
     "We check our bid price function by computing and visualizing the result."
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb6b4c37",
+   "id": "e49e6d6f",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d987380c",
+   "id": "11ef074c",
    "metadata": {},
    "source": [
     "Now we can use Python to compute the probability distribution of the price paid by the winning bidder"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e849112f",
+   "id": "e4b08204",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d5cdb5e",
+   "id": "409ef220",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a54fe3f9",
+   "id": "373588e3",
    "metadata": {},
    "source": [
     "## 5 Code Summary\n",
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee5850c",
+   "id": "460a9911",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a853e0",
+   "id": "8fed0293",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "831221b8",
+   "id": "eba2e719",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fa2fc51",
+   "id": "59c8b9bf",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a85cd1",
+   "id": "9e41e859",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ff79a2",
+   "id": "3389a085",
    "metadata": {},
    "source": [
     "## References\n",
@@ -883,7 +883,7 @@
   }
  ],
  "metadata": {
-  "date": 1706657886.3869374,
+  "date": 1708319632.709125,
   "filename": "two_auctions.md",
   "kernelspec": {
    "display_name": "Python",
